// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomSwitch should render correctly with an error label 1`] = `
<div
  className="MuiFormGroup-root rows css-1mac7pt-MuiFormGroup-root"
>
  <div
    className="columns"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 color-disabled margin-right-xs css-rizt0-MuiTypography-root"
      style={{}}
    >
      leftLabel
    </p>
    <label
      className="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd custom-switch__label css-19opgx6-MuiFormControlLabel-root"
    >
      <span
        className="MuiSwitch-root MuiSwitch-sizeMedium css-rehya9-MuiSwitch-root"
      >
        <span
          aria-disabled={true}
          className="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorSecondary Mui-checked Mui-disabled Mui-disabled PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorSecondary Mui-checked Mui-disabled Mui-checked Mui-disabled css-zp7cnf-MuiButtonBase-root-MuiSwitch-switchBase"
          data-testid="just-a-test-id"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
        >
          <input
            checked={true}
            className="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
            disabled={true}
            onChange={[Function]}
            required={false}
            type="checkbox"
          />
          <span
            className="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
          />
        </span>
        <span
          className="MuiSwitch-track css-tj8d99-MuiSwitch-track"
        />
      </span>
      <span
        className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label Mui-disabled css-rizt0-MuiTypography-root"
        style={{}}
      >
        rightLabel
      </span>
    </label>
  </div>
  <span
    className="MuiTypography-root MuiTypography-caption custom-switch__helper-text css-8gz0an-MuiTypography-root"
    data-testid="just-a-test-id__error-label"
    style={{}}
  >
    test-error-label
  </span>
</div>
`;

exports[`CustomSwitch should render correctly with just the minimal props 1`] = `
<div
  className="MuiFormGroup-root rows css-1mac7pt-MuiFormGroup-root"
>
  <div
    className="columns"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 margin-right-xs css-rizt0-MuiTypography-root"
      style={{}}
    >
      anotherLeftLabel
    </p>
    <label
      className="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd custom-switch__label css-19opgx6-MuiFormControlLabel-root"
    >
      <span
        className="MuiSwitch-root MuiSwitch-sizeMedium css-rehya9-MuiSwitch-root"
      >
        <span
          className="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorSecondary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorSecondary css-zp7cnf-MuiButtonBase-root-MuiSwitch-switchBase"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <input
            className="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
            onChange={[Function]}
            required={false}
            type="checkbox"
          />
          <span
            className="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
          />
        </span>
        <span
          className="MuiSwitch-track css-tj8d99-MuiSwitch-track"
        />
      </span>
      <span
        className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-rizt0-MuiTypography-root"
        style={{}}
      >
        anotherRightLabel
      </span>
    </label>
  </div>
</div>
`;
